2010-05-09  Albert Lee  <trisk@opensolaris.org>

	* SFEgnash.spec: Add --with-bzr-code option.
	* SFElibaudioio.spec: Add missing SUNWaudh dependency.
	* SFEmousetrap.spec: *NEW* MouseTrap - Webcam-based input system for
	  GNOME
	* SFEopencv.spec: *NEW* OpenCV - Open Computer Vision Library
	* SFEpython26-xlib.spec: Update download URL
	* patches/opencv-01-namespace.diff: Fix C++ namespace issues
	* patches/opencv-02-stdc.diff: Fix C++ correctness
	* patches/opencv-03-sunpro.diff: Add workarounds for Sun Studio
	* patches/opencv-04-v4l2.diff: Overhaul V4L2 support

2010-05-09 James Choi <jchoi42@pha.jhu.edu>

	* SFEnaim.spec: initial spec
	* SFEgaupol.spec: initial spec

2010-05-09 Milan Jurik <sfnet@xylab.cz>

	* SFEscorched3d.spec: added missing build dependency
	* SFElibmikmod.spec: oss dependency cleanup
	* SFEmikmod.spec: dependency cleanup
	* SFEextremetuxracer.spec: cleanup build dependencies
	* SFEatomix.spec: added missing build dependency
	* SFEcrafty.spec: update to 23.2
	* SFEgtkimageview.spec: added missing build dependency
	* SFEsupertuxkart.spec: initial SFE import
	* SFEapsfilter.spec: added missing build dependency
	* SFEfreemind.spec: update to 0.9.0_RC7
	* SFEassaultcube.spec: added missing build dependency

2010-05-08 Milan Jurik <sfnet@xylab.cz>

	* SFEscorched3d.spec: update to 43.1c

2010-05-07 Gilles Dauphin

	* SFEosg.spec
	* SFER-car.spec
	* SFER-Matrix.spec
	* SFEfltk.spec
	* SFER.spec
	* patches/OpenSceneGraph-09-boost-concept-check.diff
	* SFER-ctv.spec
	* SFER-e1071.spec
	* start FlightGear 2.0

2010-05-07 Milan Jurik <sfnet@xylab.cz>

	* SFEopenttd.spec: update to 1.0.1

2010-05-07  Halton Huo  <halton.huo@sun.com>

	* ext-sources/libgda-jdbc-MANIFEST.MF: Add missing file

2010-05-06 Gilles Dauphin <dauphin@enst.fr>

	* SFEosg.spec , init spec
	* SFEtransfig , netpbm, xfig , Xaw3d, Name is SFE...

2010-05-06  Simon Jin <yuntong.jin@sun.com>

	* SFElibdesktop-agnostic.spec:inital spec of desktop-agnostic, which needed in
	 awn 0.4.0
